registration now visible, needs more fixes

--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -1,6 +1,5 @@
 .modal {
     background-color: rgba(0, 0, 0, 0.4);
-    display: none;
     height: 100%;
     left: 0;
     overflow: auto;
